--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Chat</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="connect">Estou conectado, Amém!</string>
+    <string name="disconnect">Offline</string>
 </resources>
